--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -9,6 +9,15 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
+    <!-- Flash message display -->
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <div class="w-full bg-sky-500 rounded-sm py-2 px-8">
+      {% for message in messages %}
+      <span class="font-bold text-fuchsia-400 text-sm">{{ message }}</span>
+      {% endfor %}
+    </div>
+    {% endif %} {% endwith %}
+
     <div class="flex flex-col min-h-[100dvh] container mx-auto">
       <header
         class="px-4 lg:px-6 h-14 flex items-center justify-between sticky top-0 z-10">
@@ -30,6 +39,7 @@
           <span class="ml-2 text-lg font-medium">Daily Time Recorder</span>
         </a>
         <div class="flex items-center gap-7">
+          {% if not session.get('user_id') %}
           <a
             class="text-sm font-medium hover:underline underline-offset-4"
             href="{{ url_for('sign_in') }}">
@@ -40,6 +50,7 @@
             href="{{ url_for('sign_up') }}">
             Sign Up
           </a>
+          {% endif %}
         </div>
       </header>
 
