--- a/src/templates/confirm-email.html
+++ b/src/templates/confirm-email.html
@@ -13,7 +13,10 @@ block main %}
       <p class="font-light text-gray-500 dark:text-gray-400">
         Type in the code that we have sent to confirm your email.
       </p>
-      <form class="mt-4 space-y-4 lg:mt-5 md:space-y-5" action="#">
+      <form
+        class="mt-4 space-y-4 lg:mt-5 md:space-y-5"
+        action="/confirm-email"
+        method="post">
         <div>
           <label
             for="confirmation-code"
@@ -24,6 +27,7 @@ block main %}
             type="text"
             name="confirmation-code"
             id="confirmation-code"
+            autocomplete="off"
             placeholder="********"
             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             required />
