--- a/src/templates/forgot-password.html
+++ b/src/templates/forgot-password.html
@@ -43,7 +43,7 @@ block main %}
               >I accept the
               <a
                 class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-                href="#"
+                href="{{ url_for('terms_and_conditions') }}"
                 >Terms and Conditions</a
               ></label
             >
