--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -6,21 +6,82 @@
     <link
       rel="stylesheet"
       href="{{url_for('static',filename='dist/css/index.css')}}" />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='assets/calendar-icon-logo.png')
+    }}" />
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
     <!-- Flash message display -->
-    {% with messages = get_flashed_messages() %} {% if messages %}
-    <div class="w-full bg-sky-500 rounded-sm py-2 px-8">
-      {% for message in messages %}
-      <span class="font-bold text-fuchsia-400 text-sm">{{ message }}</span>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %}
+    <div
+      id="toast"
+      class="fixed top-5 right-5 z-50 opacity-0 w-full max-w-sm text-gray-500 bg-white rounded-lg shadow-md dark:text-gray-400 dark:bg-gray-800"
+      role="alert">
+      {% for category, message in messages %}
+      <div
+        style="border-color: {{ category }}"
+        class="border p-4 flex items-center rounded-lg">
+        <p style="color: {{ category }};" class="text-sm font-medium">
+          {{ message }}
+        </p>
+        <div class="flex items-center ms-auto space-x-2 rtl:space-x-reverse">
+          <button
+            style="color: {{ category }}"
+            type="button"
+            class="ms-auto -mx-1.5 -my-1.5 bg-white rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+            data-dismiss-target="#toast"
+            aria-label="Close">
+            <span class="sr-only">Close</span>
+            <svg
+              class="w-3 h-3"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 14 14">
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+            </svg>
+          </button>
+        </div>
+      </div>
       {% endfor %}
     </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const toast = document.getElementById('toast');
+        toast.classList.add('transform', '-translate-y-10');
+        setTimeout(() => {
+          toast.classList.remove('opacity-0', '-translate-y-10');
+          toast.classList.add(
+            'opacity-100',
+            'translate-y-0',
+            'transition-transform',
+            'duration-300',
+            'ease-in-out'
+          );
+        }, 100);
+        setTimeout(() => {
+          toast.classList.add(
+            'opacity-0',
+            'transition-opacity',
+            'duration-300'
+          );
+          toast.remove();
+        }, 5000);
+      });
+    </script>
     {% endif %} {% endwith %}
 
     <div class="flex flex-col min-h-[100dvh] container mx-auto">
       <header
-        class="px-4 lg:px-6 h-14 flex items-center justify-between sticky top-0 z-10">
+        class="bg-white px-4 lg:px-6 h-14 flex items-center justify-between sticky top-0 z-10">
         <a class="flex items-center" href="{{ url_for('index') }}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -39,7 +100,7 @@
           <span class="ml-2 text-lg font-medium">Daily Time Recorder</span>
         </a>
         <div class="flex items-center gap-7">
-          {% if not session.get('user_id') %}
+          {% if not session.get('user_id') and not session.get('email') %}
           <a
             class="text-sm font-medium hover:underline underline-offset-4"
             href="{{ url_for('sign_in') }}">
@@ -62,11 +123,6 @@
           class="w-full text-xs font-semibold text-gray-500 dark:text-gray-400 text-center">
           © 2024 Daily Time Recorder. All rights reserved.
         </p>
-        <!-- <nav class="sm:ml-auto flex gap-4 sm:gap-6">
-          <a class="text-xs hover:underline underline-offset-4" href="#"
-            >Home</a
-          >
-        </nav> -->
       </footer>
     </div>
 
