--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -22,8 +22,8 @@ main %}
               name="email"
               id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@company.com"
-              required="" />
+              placeholder="name@gmail.com"
+              required />
           </div>
           <div>
             <label
@@ -37,7 +37,7 @@ main %}
               id="password"
               placeholder="••••••••"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              required="" />
+              required />
           </div>
           <div class="flex items-center justify-between">
             <div class="flex items-start">
