--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -8,7 +8,11 @@ block main %}
       Fill out the form below to set up your profile.
     </p>
   </div>
-  <form class="space-y-6" action="/profile-setup" enctype="multipart/form-data">
+  <form
+    class="space-y-6"
+    action="/profile-setup"
+    method="post"
+    enctype="multipart/form-data">
     <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-6">
       <div class="space-y-2">
         <label
