--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %} {% block title %} DTR - Dashboard {% endblock %} {%
 block main %}
 <h1 class="text-center">Dashboard</h1>
+<span>Name: {{ first_name }} {{ last_name }}</span>
+<br />
+<span>Email: {{ email }}</span>
 {% endblock %}
