--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -36,3 +36,15 @@ h6 {
   font-family: 'Bricolage Grotesque', sans-serif;
   --font-sans: 'Bricolage Grotesque';
 }
+
+#progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 5px;
+  border-radius: 5px;
+  background-image: linear-gradient(#ff8259, #ffa751);
+  z-index: 9999;
+  transition: width 0.2s ease-out;
+}
