--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -10,7 +10,7 @@ main %}
           class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Sign in to your account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="#">
+        <form class="space-y-4 md:space-y-6" action="/sign-in" method="post">
           <div>
             <label
               for="email"
