--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -81,6 +81,7 @@
     {% endif %} {% endwith %}
 
     <div class="flex flex-col min-h-[100dvh] container mx-auto">
+      {% if not session.get('user_id') %}
       <header
         class="bg-white px-4 lg:px-6 h-14 flex items-center justify-between sticky top-0 z-10">
         <a class="flex items-center" href="{{ url_for('index') }}">
@@ -112,15 +113,10 @@
             href="{{ url_for('sign_up') }}">
             Sign Up
           </a>
-          {% else %}
-          <a
-            class="inline-flex h-9 items-center justify-center bg-red-700 px-6 py-2 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-red-700/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
-            href="{{ url_for('logout') }}">
-            Logout
-          </a>
           {% endif %}
         </div>
       </header>
+      {% endif %}
 
       <main class="">{% block main %}{% endblock %}</main>
 
