--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -68,7 +68,7 @@ block main %}
     <button
       class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-950 text-white hover:bg-gray-950/90 h-10 px-4 py-2 w-full"
       type="submit">
-      Save profile
+      Save
     </button>
   </form>
 </div>
