--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -17,27 +17,15 @@ block main %}
       <div class="space-y-2">
         <label
           class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-          for="firstname">
-          First name
+          for="name">
+          Name
         </label>
         <input
-          name="first-name"
+          name="name"
           class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-          id="firstname"
+          id="name"
           placeholder="Enter your first name"
           autofocus />
-      </div>
-      <div class="space-y-2">
-        <label
-          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-          for="lastname">
-          Last name
-        </label>
-        <input
-          name="last-name"
-          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-          id="lastname"
-          placeholder="Enter your last name" />
       </div>
     </div>
     <div class="space-y-2">
