--- a/src/templates/includes/dashboard-sidebar.html
+++ b/src/templates/includes/dashboard-sidebar.html
@@ -1,7 +1,7 @@
 <div
   class="w-[250px] hidden h-screen border-r bg-gray-100/40 lg:block dark:bg-gray-800/40">
   <div class="flex h-[60px] items-center px-6">
-    <a class="flex items-center gap-2 font-semibold" href="#">
+    <a class="flex items-center gap-2 font-semibold" href="/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
