--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -44,7 +44,7 @@ h6 {
   width: 0;
   height: 3px;
   border-radius: 5px;
-  background-image: linear-gradient(#ff8259, #ffa751);
+  background-image: linear-gradient(#4facfe, #00f2fe);
   z-index: 9999;
   transition: width 0.2s ease-out;
 }
