--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %} {% block title %} Daily Time Recorder {% endblock %}
 {% block main %}
-<section class="w-full py-12 md:py-24 lg:py-32 xl:py-48">
+<section class="w-full py-12 md:py-24">
   <div class="container px-4 md:px-6">
     <div
       class="grid gap-6 lg:grid-cols-[1fr_400px] lg:gap-12 xl:grid-cols-[1fr_550px]">
-      <div class="flex flex-col justify-center space-y-4">
-        <div class="space-y-2">
+      <div class="flex flex-col justify-center space-y-4 gap-4">
+        <div class="space-y-4">
           <h1
             class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none">
             Effortless Time Tracking for Your Business
@@ -15,13 +15,18 @@
             of your work hours, ensuring accurate and efficient time management.
           </p>
         </div>
-        <div>
+        <div class="mt-8">
           <a
             class="inline-flex h-10 items-center justify-center bg-gray-900 px-8 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
             href="{{ url_for('sign_in') }}"
             >Get Started</a
           >
         </div>
+      </div>
+      <div class="">
+        <img
+          src="{{url_for('static', filename='assets/time-illustration.webp')}}"
+          alt="Hero Illustration" />
       </div>
     </div>
   </div>
