--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -36,7 +36,7 @@
             <circle cx="12" cy="12" r="10"></circle>
             <polyline points="12 6 12 12 16 14"></polyline>
           </svg>
-          <span class="ml-2 text-lg font-medium">Daily Time Recorder</span>
+          <span class="ml-2 text-lg font-medium">Time Recorder</span>
         </a>
         <div class="flex items-center gap-7">
           <a
@@ -68,8 +68,5 @@
     <script
       type="module"
       src="{{url_for('static',filename='js/index.js')}}"></script>
-    <script
-      type="module"
-      src="{{url_for('static',filename='js/signup.js')}}"></script>
   </body>
 </html>
