--- a/src/templates/sign-up.html
+++ b/src/templates/sign-up.html
@@ -17,13 +17,8 @@ main %}
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
               >Continue with your email</label
             >
-            <input
-              type="email"
-              name="email"
-              id="email"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 placeholder:text-gray-400"
-              placeholder="name@gmail.com" />
-            {% if error %}
+
+            {% include "includes/email-field.html" %} {% if error %}
             <p id="error" class="text-red-500 mt-2 font-medium text-sm">
               {{ error }}
             </p>
@@ -39,7 +34,7 @@ main %}
             <a
               href="{{ url_for('sign_in') }}"
               class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-              >Login here</a
+              >Login</a
             >
           </p>
         </form>
