--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -413,4 +413,6 @@ block main %}
     </main>
   </div>
 </div>
+
+<script src="{{url_for('static',filename='js/time-schedule.js')}}"></script>
 {% endblock %}
