--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %} {% block title %} Setup Profile {% endblock %} {%
 block main %}
 
-<div class="mx-auto max-w-md space-y-6 py-12 sm:max-w-lg">
+<div
+  class="h-screen flex flex-col justify-center mx-auto max-w-sm space-y-6 sm:max-w-md">
   <div class="space-y-2 text-center">
     <h1 class="text-3xl font-bold">Complete your profile</h1>
     <p class="text-gray-500 dark:text-gray-400">
@@ -13,20 +14,19 @@ block main %}
     action="/profile-setup"
     method="post"
     enctype="multipart/form-data">
-    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-6">
-      <div class="space-y-2">
-        <label
-          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-          for="name">
-          Name
-        </label>
-        <input
-          name="name"
-          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-          id="name"
-          placeholder="Enter your first name"
-          autofocus />
-      </div>
+    <div class="space-y-2">
+      <label
+        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+        for="name">
+        Name
+      </label>
+      <input
+        name="name"
+        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
+        id="name"
+        placeholder="Enter your name"
+        autofocus
+        required />
     </div>
     <div class="space-y-2">
       <label
@@ -34,12 +34,7 @@ block main %}
         for="password">
         Password
       </label>
-      <input
-        name="password"
-        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-        id="password"
-        placeholder="Enter a password"
-        type="password" />
+      {% include "includes/password-field.html" %}
     </div>
     <div class="space-y-2">
       <label
@@ -60,4 +55,7 @@ block main %}
     </button>
   </form>
 </div>
+<script
+  type="module"
+  src="{{url_for('static',filename='js/profile-setup.js')}}"></script>
 {% endblock %}
