--- a/src/templates/sign-up.html
+++ b/src/templates/sign-up.html
@@ -42,4 +42,7 @@ main %}
     </div>
   </div>
 </section>
+<script
+  type="module"
+  src="{{url_for('static',filename='js/signup.js')}}"></script>
 {% endblock %}
