update: remember me on login

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -48,3 +48,13 @@ h6 {
   z-index: 9999;
   transition: width 0.2s ease-out;
 }
+
+div[data-category='danger'] {
+  color: red;
+  border-color: red;
+}
+
+div[data-category='success'] {
+  color: #02b775;
+  border-color: #02b775;
+}
