--- a/src/templates/includes/toast.html
+++ b/src/templates/includes/toast.html
@@ -7,16 +7,13 @@
   role="alert">
   {% for category, message in messages %}
   <div
-    style="border-color: {{ category }}"
+    data-category="{{ category }}"
     class="border p-4 flex items-center rounded-lg">
-    <p style="color: {{ category }};" class="text-sm font-medium">
-      {{ message }}
-    </p>
+    <p class="text-sm text-inherit font-medium">{{ message }}</p>
     <div class="flex items-center ms-auto space-x-2 rtl:space-x-reverse">
       <button
-        style="color: {{ category }}"
         type="button"
-        class="ms-auto -mx-1.5 -my-1.5 bg-white rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+        class="ms-auto -mx-1.5 -my-1.5 text-inherit bg-white rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
         data-dismiss-target="#toast"
         aria-label="Close">
         <span class="sr-only">Close</span>
