--- a/src/templates/forgot-password.html
+++ b/src/templates/forgot-password.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %} {% block title %} Forgot Password {% endblock %} {%
 block main %}
-<section class="bg-gray-50 dark:bg-gray-900">
+<section class="bg-white dark:bg-gray-900">
   <div
     class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
     <div
-      class="w-full p-6 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
+      class="w-full p-6 rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
       <h1
         class="mb-1 text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
         Forgot your password?
