--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -1,6 +1,6 @@
 <header
-  class="flex h-14 lg:h-[60px] items-center gap-4 border-b bg-gray-100/40 px-6 dark:bg-gray-800/40">
-  <div class="flex-1">
+  class="sticky top-0 z-10 flex h-14 lg:h-[60px] items-center gap-4 border-b bg-white justify-between dark:bg-slate-800">
+  <div class="block ml-6">
     <h1 class="font-semibold text-lg">
       {% if request.path == url_for('dashboard') %} Dashboard {% elif
       request.path == url_for('time_schedule') %} Time Schedule {% elif
@@ -8,7 +8,7 @@
     </h1>
   </div>
   <div
-    class="flex flex-1 justify-end items-center gap-4 md:ml-auto md:gap-2 lg:gap-4">
+    class="flex justify-end items-center gap-4 md:ml-auto md:gap-2 lg:gap-4 relative">
     <img
       id="avatarButton"
       type="button"
@@ -28,7 +28,7 @@
       </div>
       <div class="py-1">
         <a
-          href="{{ url_for('user_profile', user_id=session['user_id']) }}"
+          href="{{ url_for('profile') }}"
           class="flex items-center gap-2.5 px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
           <svg
             class="w-4 h-4"
@@ -41,9 +41,9 @@
         >
       </div>
       <div class="py-1">
-        <a
-          href="{{ url_for('logout') }}"
-          class="flex items-center gap-2.5 px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
+        <button
+          id="logoutButton"
+          class="flex items-center w-full gap-2.5 px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
           <svg
             class="w-4 h-4"
             xmlns="http://www.w3.org/2000/svg"
@@ -51,8 +51,15 @@
             <path
               d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z" />
           </svg>
-          Sign out</a
-        >
+          Sign out
+        </button>
+        <script>
+          document
+            .getElementById('logoutButton')
+            .addEventListener('click', () => {
+              window.location.href = "{{ url_for('logout') }}";
+            });
+        </script>
       </div>
     </div>
   </div>
