--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,4 +1,62 @@
 {% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
 main %}
-<h1>Profile Page</h1>
+<div class="w-full max-w-5xl mx-auto py-2">
+  <div class="relative rounded-2xl py-6">
+    <div
+      class="absolute inset-0 rounded-2xl bg-gradient-to-b from-[#3b95e4] to-[#0ddee9] opacity-75"></div>
+    <div class="relative px-6 py-10">
+      <div class="relative flex flex-col items-center py-16">
+        <div class="absolute -bottom-28 left-0">
+          <div class="relative w-44 h-44 rounded-full border-4 border-white">
+            <img
+              src="{{ image_src }}"
+              alt="{{ name }}"
+              class="w-full h-full rounded-full object-cover"
+              width="128"
+              height="128"
+              style="aspect-ratio: 128 / 128; object-fit: cover" />
+            <button
+              class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
+              onclick="document.getElementById('fileInput').click()">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="w-5 h-5">
+                <path
+                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
+                <circle cx="12" cy="13" r="3"></circle>
+              </svg>
+              <span class="sr-only">Upload new profile picture</span>
+            </button>
+            <input type="file" id="fileInput" style="display: none" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-12 p-6">
+    <div class="flex items-center justify-between">
+      <h2 class="text-3xl font-bold text-slate-950 tracking-tight">
+        {{ name }}
+      </h2>
+      <button>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-6 h-6"
+          viewBox="0 0 448 512">
+          <path
+            d="M8 256a56 56 0 1 1 112 0A56 56 0 1 1 8 256zm160 0a56 56 0 1 1 112 0 56 56 0 1 1 -112 0zm216-56a56 56 0 1 1 0 112 56 56 0 1 1 0-112z" />
+        </svg>
+      </button>
+    </div>
+    <p class="text-lg font-medium text-slate-950/80">Software Engineer</p>
+  </div>
+</div>
 {% endblock %}
