--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -8,7 +8,7 @@
     </h1>
   </div>
   <div
-    class="flex justify-end items-center gap-4 md:ml-auto md:gap-2 lg:gap-4 relative">
+    class="flex justify-end items-center gap-4 md:ml-auto md:gap-2 lg:gap-4 relative rounded-full">
     <img
       id="avatarButton"
       type="button"
@@ -16,7 +16,7 @@
       data-dropdown-placement="bottom-start"
       class="w-9 h-9 rounded-full cursor-pointer"
       src="{{ image_src }}"
-      alt="User" />
+      alt="{{ name }}" />
 
     <!-- Dropdown menu -->
     <div
