--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,8 @@
   <div class="container px-4 md:px-6">
     <div
       class="grid gap-6 lg:grid-cols-[1fr_400px] lg:gap-12 xl:grid-cols-[1fr_550px]">
-      <div class="flex flex-col justify-center space-y-4 gap-4">
+      <div
+        class="order-2 lg:order-1 flex flex-col justify-center space-y-4 gap-4">
         <div class="space-y-4">
           <h1
             class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none">
@@ -23,7 +24,7 @@
           >
         </div>
       </div>
-      <div class="">
+      <div class="order-1 lg:order-2">
         <img
           src="{{url_for('static', filename='assets/time-illustration.webp')}}"
           alt="Hero Illustration" />
