--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -31,15 +31,15 @@ main %}
             <div class="flex items-start">
               <div class="flex items-center h-5">
                 <input
-                  id="remember-me"
-                  name="remember-me"
-                  aria-describedby="remember-me"
+                  id="remember_me"
+                  name="remember_me"
+                  aria-describedby="remember_me"
                   type="checkbox"
                   class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" />
               </div>
               <div class="ml-3 text-sm">
                 <label
-                  for="remember-me"
+                  for="remember_me"
                   class="text-gray-500 dark:text-gray-300"
                   >Remember me</label
                 >
