--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -29,7 +29,7 @@ block main %}
         <h5
           id="drawer-label"
           class="inline-flex items-center mb-4 text-base font-semibold text-gray-500 uppercase dark:text-gray-400">
-          Time schedule
+          Set Time Schedule
         </h5>
         <button
           type="button"
