--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -51,7 +51,7 @@ main %}
         title="{{email}}"
         id="currentUserName"
         class="text-3xl font-bold text-slate-950 tracking-tight">
-        {{ last_name }}, {{ first_name }} {{ middle_name }}
+        {{ last_name }}, {{ first_name }}
       </h2>
       {% if job_title %}
       <p class="text-lg font-medium text-slate-950/80">{{ job_title }}</p>
