--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -8,92 +8,112 @@ block main %}
   </h1>
 
   <div class="flex flex-col md:flex-row justify-between items-center">
-    <div
-      class="relative mb-12 md:mb-0 w-48 h-48 rounded-full border-4 border-black/60">
-      <img
-        src="{{ image_src }}"
-        alt="User"
-        class="w-full h-full rounded-full object-cover"
-        id="profile-image" />
-      <button
-        title="Set profile picture"
-        class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
-        onclick="document.getElementById('fileInput').click()">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="w-5 h-5">
-          <path
-            d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
-          <circle cx="12" cy="13" r="3"></circle>
-        </svg>
-        <span class="sr-only">Upload new profile picture</span>
-      </button>
-      <input type="file" id="fileInput" style="display: none" />
+    <div class="flex flex-col gap-6">
+      <div
+        class="relative mb-12 md:mb-0 w-48 h-48 rounded-full border-4 border-black/60">
+        <img
+          src="{{ image_src }}"
+          alt="User"
+          class="w-full h-full rounded-full object-cover"
+          id="profile-image" />
+        <button
+          title="Set avatar"
+          class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
+          onclick="document.getElementById('fileInput').click()">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="w-5 h-5">
+            <path
+              d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
+            <circle cx="12" cy="13" r="3"></circle>
+          </svg>
+          <span class="sr-only">Upload new profile picture</span>
+        </button>
+        <input type="file" id="fileInput" style="display: none" />
+      </div>
+      <h3
+        class="text-center text-gray-950 font-semibold text-base dark:text-gray-400">
+        Set Profile Avatar
+      </h3>
     </div>
-    <form
-      class="space-y-6"
-      action="/profile-setup"
-      method="post"
-      enctype="multipart/form-data">
-      <p class="text-gray-500 dark:text-gray-400 text-center">
-        Fill out the form below to set up your profile.
-      </p>
+    <form id="form" class="space-y-6">
+      <h3 class="text-gray-950 font-semibold text-xl dark:text-gray-400">
+        Personal information
+      </h3>
       <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-6">
         <div class="space-y-2">
           <label
-            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-            for="first-name">
+            class="text-gray-950 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="first_name">
             First name <span class="text-red-600">*</span>
           </label>
           <input
-            name="first-name"
+            name="first_name"
             class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-            id="first-name"
+            id="first_name"
             autofocus
             required />
         </div>
         <div class="space-y-2">
           <label
-            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-            for="lastname">
+            class="text-gray-950 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="last_name">
             Last name <span class="text-red-600">*</span>
           </label>
           <input
-            id="lastname"
-            name="last-name"
+            id="last_name"
+            name="last_name"
             required
             class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
         </div>
       </div>
-      <div class="space-y-2">
-        <label
-          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-          for="middle-name">
-          Middle name <span class="text-gray-400">(optional)</span>
-        </label>
-        <input
-          id="middle-name"
-          name="middle-name"
-          class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
+      <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-6">
+        <div class="space-y-2">
+          <label
+            class="text-gray-950 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="position">
+            Position <span class="text-gray-500/80 ml-1">(optional)</span>
+          </label>
+          <input
+            id="position"
+            name="position"
+            class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
+        </div>
+        <div class="space-y-2">
+          <label
+            class="text-gray-950 text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="employee_id">
+            Employee ID <span class="text-gray-500/80 ml-1">(optional)</span>
+          </label>
+          <input
+            id="employee_id"
+            name="employee_id"
+            class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
+        </div>
       </div>
-      <div class="space-y-2">
+      <div class="space-y-2 mb-2">
+        <h3 class="text-gray-950 font-semibold text-xl dark:text-gray-400 my-4">
+          Login credentials
+        </h3>
         <label
           class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
           for="password">
           Set password <span class="text-red-600">*</span>
         </label>
         {% include "includes/password-field.html" %}
+        <div id="response"></div>
       </div>
       <button
-        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-950 text-white hover:bg-gray-950/90 h-10 px-4 py-2 w-full"
+        id="submit-button"
+        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-60 bg-gray-950 text-white hover:bg-gray-950/90 h-10 px-4 py-2 w-full"
         type="submit">
         Save
       </button>
