--- a/src/templates/includes/dashboard-sidebar.html
+++ b/src/templates/includes/dashboard-sidebar.html
@@ -2,22 +2,8 @@
   class="w-[250px] hidden min-h-screen border-r bg-white lg:block dark:bg-slate-800">
   <div class="sticky top-0">
     <div class="flex h-[60px] items-center px-6">
-      <a class="flex items-center gap-2 font-semibold" href="/">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="h-6 w-6">
-          <circle cx="12" cy="12" r="10"></circle>
-          <polyline points="12 6 12 12 16 14"></polyline>
-        </svg>
-        <h2 class="">Time Recorder</h2>
+      <a class="flex items-center gap-2 text-lg font-bold" href="/">
+        <span>Time Recorder</span>
       </a>
     </div>
     <nav class="grid items-start px-4 text-sm font-medium">
