--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,102 +1,71 @@
 {% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
 main %}
-<div class="w-full max-w-5xl mx-auto py-2">
-  <div class="relative rounded-2xl py-6">
-    <div
-      class="absolute inset-0 rounded-2xl bg-gradient-to-b from-[#3b95e4] to-[#0ddee9] opacity-75"></div>
-    <div class="relative px-6 py-10">
-      <div class="relative flex flex-col items-center py-16">
-        <div class="absolute -bottom-28 left-0">
+
+<div class="flex w-full">
+  {% include "includes/dashboard-sidebar.html" %}
+  <div class="flex-1 flex flex-col w-full">
+    <main class="flex-1 pl-6 py-6">
+      <section class="bg-gray-100 p-4 md:p-8 rounded-lg">
+        <h2 class="mb-10 text-xl font-semibold">Personal Information</h2>
+        <div class="flex gap-6">
           <div
-            title="{{name}}"
-            class="relative w-44 h-44 rounded-full border-4 border-white">
+            title="{{first_name}}"
+            class="relative w-28 h-28 rounded-full border-2">
             <img
               src="{{ image_src }}"
               alt="{{ name }}"
               class="w-full h-full rounded-full object-cover"
-              width="128"
-              height="128"
-              id="profile-image"
-              style="aspect-ratio: 128 / 128; object-fit: cover" />
-            <button
+              width="96"
+              height="96"
+              id="profile-image" />
+            <!-- <button
+              id="upload-button"
               title="Upload profile"
-              class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
+              class="absolute bottom-1 -right-1.5 bg-slate-800 text-white rounded-full p-1.5 hover:bg-slate-950/70 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
               onclick="document.getElementById('fileInput').click()">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
+                width="20"
+                height="20"
                 viewBox="0 0 24 24"
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="w-5 h-5">
+                class="w-4 h-4">
                 <path
                   d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
                 <circle cx="12" cy="13" r="3"></circle>
               </svg>
               <span class="sr-only">Upload new profile picture</span>
             </button>
-            <input type="file" id="fileInput" style="display: none" />
+            <input type="file" id="fileInput" style="display: none" /> -->
+          </div>
+          <div
+            class="py-2 flex flex-col space-y-1 text-lg font-semibold text-gray-800 tracking-tight">
+            <div class="w-full">
+              <span>
+                {{ last_name }}, {{ first_name }} {% if middle_name %} {{
+                middle_name }} {% endif %}
+              </span>
+            </div>
+            {% if position %}
+            <div class="w-full">
+              <span>{{ position }}</span>
+            </div>
+            {% endif %} {% if employee_id %}
+            <div class="w-full">
+              <span>{{ employee_id }}</span>
+            </div>
+            {% endif %}
+            <div class="w-full">
+              <span>{{ email }}</span>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div id="dynamicField" class="mt-12 p-6 flex items-start justify-between">
-    <div data-profile-view class="block">
-      <h2
-        title="{{email}}"
-        id="currentUserName"
-        class="text-3xl font-bold text-slate-950 tracking-tight">
-        {{ last_name }}, {{ first_name }}
-      </h2>
-      {% if job_title %}
-      <p class="text-lg font-medium text-slate-950/80">{{ job_title }}</p>
-      {% endif %}
-    </div>
-    <form data-profile-edit class="hidden space-y-4 flex-1 max-w-[250px]">
-      <div class="flex flex-col gap-2">
-        <label
-          for="name"
-          class="block text-sm font-medium text-gray-900 dark:text-white"
-          >Name</label
-        >
-        <input
-          type="text"
-          id="name"
-          name="name"
-          class="block w-full p-2 text-gray-900 border border-gray-300 rounded-md bg-gray-50 text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
-      </div>
-      <div class="flex flex-col gap-2">
-        <label
-          for="job-title"
-          class="block text-sm font-medium text-gray-900 dark:text-white"
-          >Job Title</label
-        >
-        <input
-          type="text"
-          id="job-title"
-          name="job-title"
-          class="block w-full p-2 text-gray-900 border border-gray-300 rounded-md bg-gray-50 text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
-      </div>
-      <button
-        type="submit"
-        class="text-white bg-gradient-to-r from-green-400 via-green-400 to-green-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-md shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-md text-sm px-6 py-2 text-center">
-        Save
-      </button>
-    </form>
-    <button
-      id="edit-profile"
-      class="relative inline-flex items-center justify-center p-0.5 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-md group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
-      <span
-        id="btnInnerText"
-        class="relative px-4 py-2 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-        Edit profile
-      </span>
-    </button>
+      </section>
+    </main>
   </div>
 </div>
 
