--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -1,73 +1,175 @@
-<header
-  class="sticky top-0 z-10 flex h-14 lg:h-[60px] items-center gap-4 border-b bg-white justify-between dark:bg-slate-800">
-  <div class="block ml-6">
-    <h1 class="font-semibold text-lg">
-      {% if request.path == url_for('dashboard') %} Dashboard {% elif
-      request.path == url_for('time_schedule') %} Time Schedule {% elif
-      request.path == url_for('daily_logs') %} Daily Logs 
-      {% endif %}
-    </h1>
-  </div>
-  <div
-    class="flex justify-end items-center gap-4 md:ml-auto md:gap-2 lg:gap-4 relative rounded-full">
-    <img
-      id="avatarButton"
-      type="button"
-      data-dropdown-toggle="userDropdown"
-      data-dropdown-placement="bottom-start"
-      class="w-9 h-9 rounded-full cursor-pointer"
-      src="{{ image_src }}"
-      alt="{{ name }}" />
-
-    <!-- Dropdown menu -->
-    <div
-      id="userDropdown"
-      class="z-10 hidden bg-white border rounded-lg shadow-lg dark:bg-gray-700 dark:divide-gray-600">
-      <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-        <h4 class="text-base font-semibold">
-          {{ first_name }} {{ last_name }}
-        </h4>
-        <p class="font-medium truncate">{{ email }}</p>
-      </div>
-      <div class="py-1 border-t border-gray-200">
-        <a
-          href="{{ url_for('profile') }}"
-          class="flex items-center gap-2.5 px-4 py-2 text-sm text-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
-          <svg
-            class="w-4 h-4"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            stroke="currentColor"
-            fill="currentColor">
-            <path
-              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z" />
-          </svg>
-          Manage Profile</a
+<nav
+  class="bg-white border-b border-gray-200 px-4 py-2.5 dark:bg-gray-800 dark:border-gray-700 fixed inset-x-0 top-0 z-50">
+  <div class="flex flex-wrap justify-between items-center">
+    <div class="flex justify-start items-center">
+      <button
+        data-drawer-target="drawer-navigation"
+        data-drawer-toggle="drawer-navigation"
+        aria-controls="drawer-navigation"
+        class="p-2 mr-2 text-gray-600 rounded-lg cursor-pointer md:hidden hover:text-gray-900 hover:bg-gray-100 focus:bg-gray-100 dark:focus:bg-gray-700 focus:ring-2 focus:ring-gray-100 dark:focus:ring-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+        <svg
+          aria-hidden="true"
+          class="w-6 h-6"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"></path>
+        </svg>
+        <svg
+          aria-hidden="true"
+          class="hidden w-6 h-6"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"></path>
+        </svg>
+        <span class="sr-only">Toggle sidebar</span>
+      </button>
+      <a href="/" class="flex items-center justify-between mr-4">
+        <span
+          class="self-center text-lg sm:text-xl font-semibold whitespace-nowrap dark:text-white"
+          >Daily Time Recorder</span
         >
+      </a>
+    </div>
+    <div class="flex items-center lg:order-2">
+      <!-- Notifications -->
+      <button
+        type="button"
+        data-dropdown-toggle="notification-dropdown"
+        class="p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600">
+        <span class="sr-only">View notifications</span>
+        <!-- Bell icon -->
+        <svg
+          aria-hidden="true"
+          class="w-6 h-6"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"></path>
+        </svg>
+      </button>
+      <!-- Dropdown menu -->
+      <div
+        class="hidden overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
+        id="notification-dropdown">
+        <div
+          class="block py-2 px-4 text-base font-medium text-gray-700 bg-gray-50 dark:bg-gray-600 dark:text-gray-300">
+          Notifications
+        </div>
+        <div
+          class="flex items-center justify-center w-72 h-80 py-3 px-4 border-b">
+          <span class="text-sm text-gray-400">No new notifications</span>
+        </div>
       </div>
-      <div class="py-1">
-        <button
-          id="logoutButton"
-          class="flex items-center w-full gap-2.5 px-4 py-2 text-sm text-red-600 hover:bg-red-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
-          <svg
-            class="w-4 h-4"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            stroke="currentColor"
-            fill="currentColor">
-            <path
-              d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z" />
-          </svg>
-          Sign out
-        </button>
-        <script>
-          document
-            .getElementById('logoutButton')
-            .addEventListener('click', () => {
-              window.location.href = "{{ url_for('logout') }}";
-            });
-        </script>
+      <button
+        type="button"
+        class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+        id="user-menu-button"
+        aria-expanded="false"
+        data-dropdown-toggle="dropdown">
+        <span class="sr-only">Open user menu</span>
+        <img
+          class="w-8 h-8 rounded-full"
+          src="{{ image_src }}"
+          alt="user photo" />
+      </button>
+      <!-- Dropdown menu -->
+      <div
+        class="hidden z-50 my-4 w-56 text-base list-none bg-white divide-y divide-gray-100 shadow-md dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+        id="dropdown">
+        <div class="py-3 px-4">
+          <span
+            class="block text-sm font-semibold text-gray-900 dark:text-white"
+            >{{ first_name }} {{ last_name }}</span
+          >
+          <span class="block text-sm text-gray-900 truncate dark:text-white"
+            >{{ email }}</span
+          >
+        </div>
+        <ul
+          class="py-1 text-gray-700 dark:text-gray-300"
+          aria-labelledby="dropdown">
+          <li>
+            <a
+              href="{{ url_for('profile') }}"
+              class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
+              >My profile</a
+            >
+          </li>
+        </ul>
+        <ul
+          class="py-1 text-gray-700 dark:text-gray-300"
+          aria-labelledby="dropdown">
+          <li>
+            <button
+              id="theme-toggle"
+              class="flex w-full justify-between items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+              <div class="flex items-center">
+                <svg
+                  class="mr-2 w-5 h-5 text-gray-400"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 512">
+                  <path
+                    d="M495.8 0c5.5 0 10.9 .2 16.3 .7c7 .6 12.8 5.7 14.3 12.5s-1.6 13.9-7.7 17.3c-44.4 25.2-74.4 73-74.4 127.8c0 81 65.5 146.6 146.2 146.6c8.6 0 17-.7 25.1-2.1c6.9-1.2 13.8 2.2 17 8.5s1.9 13.8-3.1 18.7c-34.5 33.6-81.7 54.4-133.6 54.4c-9.3 0-18.4-.7-27.4-1.9c-11.2-22.6-29.8-40.9-52.6-51.7c-2.7-58.5-50.3-105.3-109.2-106.7c-1.7-10.4-2.6-21-2.6-31.8C304 86.1 389.8 0 495.8 0zM447.9 431.9c0 44.2-35.8 80-80 80H96c-53 0-96-43-96-96c0-47.6 34.6-87 80-94.6l0-1.3c0-53 43-96 96-96c34.9 0 65.4 18.6 82.2 46.4c13-9.1 28.8-14.4 45.8-14.4c44.2 0 80 35.8 80 80c0 5.9-.6 11.7-1.9 17.2c37.4 6.7 65.8 39.4 65.8 78.7z" />
+                </svg>
+                <span>Dark mode</span>
+              </div>
+              <label class="inline-flex items-center cursor-pointer">
+                <input
+                  type="checkbox"
+                  value=""
+                  name="dark-mode"
+                  id="dark-mode"
+                  class="sr-only peer" />
+                <div
+                  class="relative w-9 h-5 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-600 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+                <span class="sr-only">Weekdays</span>
+              </label>
+            </button>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="flex items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+              ><svg
+                class="mr-2 w-5 h-5 text-gray-400"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"></path>
+              </svg>
+              Collections</a
+            >
+          </li>
+        </ul>
+        <ul
+          class="py-1 text-gray-700 dark:text-gray-300"
+          aria-labelledby="dropdown">
+          <li>
+            <button
+              id="logout-button"
+              class="block w-full text-left py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
+              Sign out
+            </button>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-</header>
+  <script>
+    document.getElementById('logout-button').addEventListener('click', () => {
+      window.location.href = "{{ url_for('logout') }}";
+    });
+  </script>
+  <script src="{{url_for('static',filename='js/dark-mode.js')}}"></script>
+</nav>
