--- a/src/templates/includes/toast.html
+++ b/src/templates/includes/toast.html
@@ -3,7 +3,7 @@
 %}
 <div
   id="toast"
-  class="fixed top-5 right-5 z-50 flex flex-col gap-2 opacity-0 w-full max-w-sm text-gray-500 bg-white rounded-lg shadow-md dark:text-gray-400 dark:bg-gray-800"
+  class="fixed top-5 right-5 z-[100] flex flex-col gap-2 opacity-0 w-full max-w-sm text-gray-500 bg-white rounded-lg shadow-md dark:text-gray-400 dark:bg-gray-800"
   role="alert">
   {% for category, message in messages %}
   <div
