--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,10 +1,43 @@
 {% extends "layout.html" %} {% block title %} Dashboard {% endblock %} {% block
 main %}
-<div class="flex w-full">
-  {% include "includes/dashboard-sidebar.html" %}
-  <div class="flex-1 flex flex-col w-full">
-    {% include "includes/dashboard-header.html" %}
-    <main class="flex-1 pl-6 py-6"></main>
-  </div>
+<div class="antialiased bg-gray-50 dark:bg-gray-900">
+  {% include "includes/dashboard-header.html" %} {% include
+  "includes/dashboard-sidebar.html" %}
+  <main class="p-4 md:ml-60 h-auto pt-20">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
+      <div
+        class="border-2 border-dashed border-gray-300 rounded-lg dark:border-gray-600 h-32 md:h-64"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-32 md:h-64"></div>
+    </div>
+    <div
+      class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
+    <div class="grid grid-cols-2 gap-4 mb-4">
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+    </div>
+    <div
+      class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-96 mb-4"></div>
+    <div class="grid grid-cols-2 gap-4">
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+      <div
+        class="border-2 border-dashed rounded-lg border-gray-300 dark:border-gray-600 h-48 md:h-72"></div>
+    </div>
+  </main>
 </div>
 {% endblock %}
