--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -17,19 +17,19 @@ block main %}
           data-drawer-target="drawer-timepicker"
           data-drawer-show="drawer-timepicker"
           aria-controls="drawer-timepicker">
-          Set time schedule now
+          Set schedule now
         </button>
       </div>
       <!-- drawer component -->
       <div
         id="drawer-timepicker"
-        class="fixed top-0 left-0 z-40 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-96 dark:bg-gray-800"
+        class="fixed top-0 left-0 z-[60] h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-96 dark:bg-gray-800 shadow"
         tabindex="-1"
         aria-labelledby="drawer-timepicker-label">
         <h5
           id="drawer-label"
-          class="inline-flex items-center mb-4 text-base font-semibold text-gray-500 uppercase dark:text-gray-400">
-          Set Time Schedule
+          class="inline-flex items-center mb-4 text-base py-1 font-semibold text-gray-500 uppercase dark:text-gray-400">
+          Set Schedule
         </h5>
         <button
           type="button"
@@ -55,7 +55,7 @@ block main %}
           class="rounded-lg border-[2px] border-blue-300 bg-gray-50 px-4 py-3 dark:border-gray-600 dark:bg-gray-700 mb-4 shadow-sm">
           <div class="flex justify-between items-center">
             <span class="text-gray-900 dark:text-white text-base font-medium"
-              >Business days</span
+              >Weekdays</span
             >
             <label class="inline-flex items-center cursor-pointer">
               <input
@@ -66,14 +66,14 @@ block main %}
                 class="sr-only peer" />
               <div
                 class="relative w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-600 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
-              <span class="sr-only">Business days</span>
+              <span class="sr-only">Weekdays</span>
             </label>
           </div>
         </div>
         <form>
           <section class="">
             <!-- Sunday -->
-            <div class="mb-6" id="container-sunday">
+            <div class="mb-5" id="container-sunday">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -118,7 +118,7 @@ block main %}
               </div>
             </div>
             <!-- Monday -->
-            <div class="mb-6">
+            <div class="mb-5">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -162,7 +162,7 @@ block main %}
               </div>
             </div>
             <!-- Tuesday -->
-            <div class="mb-6">
+            <div class="mb-5">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -208,7 +208,7 @@ block main %}
               </div>
             </div>
             <!-- Wednesday -->
-            <div class="mb-6">
+            <div class="mb-5">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -254,7 +254,7 @@ block main %}
               </div>
             </div>
             <!-- Thursday -->
-            <div class="mb-6">
+            <div class="mb-5">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -301,7 +301,7 @@ block main %}
             </div>
 
             <!-- Friday -->
-            <div class="mb-6">
+            <div class="mb-5">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
@@ -346,7 +346,7 @@ block main %}
             </div>
 
             <!-- Saturday -->
-            <div class="mb-6" id="container-saturday">
+            <div class="mb-5" id="container-saturday">
               <div class="flex items-center justify-between">
                 <div class="flex items-center min-w-[4rem]">
                   <input
