--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,73 +1,248 @@
 {% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
-main %}
-
-<div class="flex w-full">
-  {% include "includes/dashboard-sidebar.html" %}
-  <div class="flex-1 flex flex-col w-full">
-    <main class="flex-1 pl-6 py-6">
-      <section class="bg-gray-100 p-4 md:p-8 rounded-lg">
-        <h2 class="mb-10 text-xl font-semibold">Personal Information</h2>
-        <div class="flex gap-6">
-          <div
-            title="{{first_name}}"
-            class="relative w-28 h-28 rounded-full border-2">
-            <img
-              src="{{ image_src }}"
-              alt="{{ name }}"
-              class="w-full h-full rounded-full object-cover"
-              width="96"
-              height="96"
-              id="profile-image" />
-            <!-- <button
-              id="upload-button"
-              title="Upload profile"
-              class="absolute bottom-1 -right-1.5 bg-slate-800 text-white rounded-full p-1.5 hover:bg-slate-950/70 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
-              onclick="document.getElementById('fileInput').click()">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="w-4 h-4">
-                <path
-                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
-                <circle cx="12" cy="13" r="3"></circle>
-              </svg>
-              <span class="sr-only">Upload new profile picture</span>
-            </button>
-            <input type="file" id="fileInput" style="display: none" /> -->
-          </div>
-          <div
-            class="py-2 flex flex-col space-y-1 text-lg font-semibold text-gray-800 tracking-tight">
-            <div class="w-full">
-              <span>
-                {{ last_name }}, {{ first_name }} {% if middle_name %} {{
-                middle_name }} {% endif %}
-              </span>
+main %} {% include "includes/dashboard-header.html" %} {% include
+"includes/dashboard-sidebar.html" %}
+<main
+  class="antialiased bg-gray-50 dark:bg-gray-900 md:ml-60 h-auto pt-14 sm:pt-20">
+  <div
+    class="grid grid-cols-1 md:px-4 xl:grid-cols-3 xl:gap-4 dark:bg-gray-900">
+    <div class="col-span-full xl:col-auto">
+      <div
+        class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <div
+          class="items-center sm:flex xl:block 2xl:flex sm:space-x-4 xl:space-x-0 2xl:space-x-4">
+          <img
+            class="mb-4 rounded-lg w-28 h-28 sm:mb-0 xl:mb-4 2xl:mb-0"
+            src="{{ image_src }}"
+            alt="{{ name }}" />
+          <div>
+            <h3 class="mb-1 text-xl font-bold text-gray-900 dark:text-white">
+              Profile picture
+            </h3>
+            <div class="mb-4 text-sm text-gray-500 dark:text-gray-400">
+              JPG, GIF or PNG. Max size of 800K
             </div>
-            {% if position %}
-            <div class="w-full">
-              <span>{{ position }}</span>
-            </div>
-            {% endif %} {% if employee_id %}
-            <div class="w-full">
-              <span>{{ employee_id }}</span>
-            </div>
-            {% endif %}
-            <div class="w-full">
-              <span>{{ email }}</span>
+            <div class="flex items-center space-x-4">
+              <button
+                type="button"
+                id="upload-button"
+                class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                onclick="document.getElementById('fileInput').click()">
+                <svg
+                  class="w-4 h-4 mr-2 -ml-1"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path>
+                  <path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path>
+                </svg>
+                Upload picture
+              </button>
+              <input type="file" id="fileInput" style="display: none" />
+              <button
+                type="button"
+                class="py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                Delete
+              </button>
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
+
+    <div class="col-span-2">
+      <div
+        class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <h3 class="mb-4 text-xl font-semibold dark:text-white">
+          Personal information
+        </h3>
+        <form action="#">
+          <div class="grid grid-cols-6 gap-6">
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="first_name"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >First Name</label
+              >
+              <input
+                type="text"
+                name="first_name"
+                id="first_name"
+                value="{{ first_name }}"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="last_name"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Last Name</label
+              >
+              <input
+                type="text"
+                name="last_name"
+                id="last_name"
+                value="{{ last_name }}"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="email"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Email</label
+              >
+              <input
+                type="email"
+                name="email"
+                id="email"
+                value="{{ email }}"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="birthday"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Birthday</label
+              >
+              <input
+                type="date"
+                name="birthday"
+                id="birthday"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+            </div>
+
+            <div class="col-span-6 sm:col-full">
+              <button
+                class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                type="submit">
+                Save all
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div
+        class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <h3 class="mb-4 text-xl font-semibold dark:text-white">
+          Employment information
+        </h3>
+        <form action="#">
+          <div class="grid grid-cols-6 gap-6">
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="company"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Company
+              </label>
+              <input
+                type="text"
+                name="company"
+                id="company"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="employee_id"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Employee ID</label
+              >
+              <input
+                type="text"
+                name="employee_id"
+                id="employee_id"
+                value="{{ employee_id }}"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="position"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Position</label
+              >
+              <input
+                type="text"
+                name="position"
+                id="position"
+                value="{{ position }}"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-full">
+              <button
+                class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                type="submit">
+                Save all
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div
+        class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        <h3 class="mb-4 text-xl font-semibold dark:text-white">
+          Password information
+        </h3>
+        <form action="#">
+          <div class="grid grid-cols-6 gap-6">
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="current_password"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Current password</label
+              >
+              <input
+                type="text"
+                name="current_password"
+                id="current_password"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                placeholder="••••••••"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="password"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >New password</label
+              >
+              <input
+                type="password"
+                id="password"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="••••••••"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <label
+                for="confirm_password"
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                >Confirm password</label
+              >
+              <input
+                type="text"
+                name="confirm_password"
+                id="confirm_password"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                placeholder="••••••••"
+                required />
+            </div>
+            <div class="col-span-6 sm:col-full">
+              <button
+                class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                type="submit">
+                Save all
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-</div>
+</main>
 
 <script src="{{url_for('static',filename='js/profile-upload.js')}}"></script>
 
