--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -58,7 +58,7 @@
       </button>
       <!-- Dropdown menu -->
       <div
-        class="hidden overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
+        class="hidden overflow-hidden z-[55] my-4 max-w-sm text-base list-none bg-white divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
         id="notification-dropdown">
         <div
           class="block py-2 px-4 text-base font-medium text-gray-700 bg-gray-50 dark:bg-gray-600 dark:text-gray-300">
@@ -83,7 +83,7 @@
       </button>
       <!-- Dropdown menu -->
       <div
-        class="hidden z-50 my-4 w-56 text-base list-none bg-white divide-y divide-gray-100 shadow-md dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+        class="hidden z-[55] my-4 w-56 text-base list-none bg-white divide-y divide-gray-100 shadow-md dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
         id="dropdown">
         <div class="py-3 px-4">
           <span
@@ -102,6 +102,13 @@
               href="{{ url_for('profile') }}"
               class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
               >My profile</a
+            >
+          </li>
+          <li>
+            <a
+              href="#"
+              class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
+              >Account settings</a
             >
           </li>
         </ul>
@@ -129,10 +136,11 @@
                   value=""
                   name="dark-mode"
                   id="dark-mode"
-                  class="sr-only peer" />
+                  class="sr-only peer"
+                  disabled />
                 <div
-                  class="relative w-9 h-5 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-600 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
-                <span class="sr-only">Weekdays</span>
+                  class="relative w-9 h-5 bg-gray-200 rounded-full peer dark:bg-gray-600 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+                <span class="sr-only">Dark mode</span>
               </label>
             </button>
           </li>
