--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block title %} Daily Time Recorder {% endblock %}
 {% block main %}
-<section class="w-full py-12 md:py-24">
+<main class="w-full py-12 md:py-24 mx-auto max-w-[1440px] mt-16">
   <div class="container px-4 md:px-6">
     <div
       class="grid gap-6 lg:grid-cols-[1fr_400px] lg:gap-12 xl:grid-cols-[1fr_550px]">
@@ -8,17 +8,17 @@
         class="order-2 lg:order-1 flex flex-col justify-center space-y-4 gap-4">
         <div class="space-y-4">
           <h1
-            class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none">
+            class="text-3xl font-bold tracking-tighter sm:text-5xl xl:text-6xl/none text-gray-950 dark:text-gray-100">
             Effortless Time Tracking for Your Business
           </h1>
-          <p class="max-w-[600px] text-gray-500 md:text-xl dark:text-gray-400">
+          <p class="max-w-[600px] text-gray-500 dark:text-gray-400 md:text-xl">
             Our daily time recorder system helps you and your team stay on top
             of your work hours, ensuring accurate and efficient time management.
           </p>
         </div>
         <div class="mt-8">
           <a
-            class="inline-flex h-10 items-center justify-center bg-gray-900 px-8 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
+            class="inline-flex items-center px-8 py-2.5 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
             href="{{ url_for('sign_in') }}"
             >Get Started</a
           >
@@ -31,5 +31,5 @@
       </div>
     </div>
   </div>
-</section>
+</main>
 {% endblock %}
