--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -12,8 +12,9 @@
     }}" />
     <title>{% block title %} {% endblock %}</title>
     <script>
-      (function() {
-        const darkMode = localStorage.getItem('color-theme') === 'dark' ||
+      (function () {
+        const darkMode =
+          localStorage.getItem('color-theme') === 'dark' ||
           (!('color-theme' in localStorage) &&
             window.matchMedia('(prefers-color-scheme: dark)').matches);
         if (darkMode) {
@@ -24,14 +25,15 @@
   </head>
   <body class="bg-gray-50 dark:bg-gray-900">
     <div id="progress-bar"></div>
-
     {% include "includes/toast.html" %}
 
     <div class="flex flex-col px-4">
       {% if not session.get('user_id') %}
       <header
-        class="bg-white px-4 lg:px-6 h-14 flex items-center justify-between sticky top-0 z-10">
-        <a class="flex items-center" href="{{ url_for('index') }}">
+        class="flex items-center justify-between bg-white border-b border-gray-200 px-4 py-2.5 dark:bg-gray-800 dark:border-gray-700 fixed inset-x-0 top-0 z-10">
+        <a
+          class="flex items-center dark:text-gray-100"
+          href="{{ url_for('index') }}">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -50,12 +52,12 @@
         </a>
         <div class="flex items-center gap-7">
           <a
-            class="text-sm font-medium hover:underline underline-offset-4"
+            class="text-sm font-medium hover:underline dark:text-gray-100 underline-offset-4"
             href="{{ url_for('sign_in') }}">
             Login
           </a>
           <a
-            class="inline-flex h-9 items-center justify-center bg-gray-900 px-6 py-2 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
+            class="inline-flex items-center px-6 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
             href="{{ url_for('sign_up') }}">
             Sign Up
           </a>
@@ -64,7 +66,7 @@
       {% endif %} {% block main %}{% endblock %} {% if not
       session.get('user_id') %}
       <footer
-        class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t">
+        class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t dark:border-gray-800">
         <p
           class="w-full text-xs font-semibold text-gray-500 dark:text-gray-400 text-center">
           © 2024 Daily Time Recorder. All rights reserved.
